# album-software-engineering

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
album-backend/: .dockerignore  .env.example  Dockerfile  README.md  pom.xml
album-backend/scripts/: init-default-users.sh
album-frontend/: README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
album-frontend/src/: App.css  App.tsx  main.tsx
album-frontend/src/components/: AIChat.tsx  AboutPanel.tsx  AdminDashboard.tsx  AuthAvatar.tsx  AuthImage.tsx  DownloadTaskPanel.tsx  FaceManager.tsx  FolderManager.tsx  HomeDashboard.tsx  Login.tsx  Membership.tsx  PaymentModal.tsx  PhotoGallery.tsx  ProfilePanel.tsx  RecycleBin.tsx  SettingsPanel.tsx  SmartSearch.tsx  TransferPanel.tsx  UploadTaskPanel.tsx
album-frontend/src/services/: api.ts  (+1 more)
album-rag/: .dockerignore  .env.example  Dockerfile  README.md  USAGE.md  pyproject.toml
album-rag/dev/: README.md
album-rag/dev/scripts/: generate_viewer.py  start-web.ps1  view_descriptions.py
album-rag/dev/static/: index.html
album-rag/src/rag/: __init__.py  cli.py  config.py  embedder.py  image_descriptor.py  ingest.py  main.py  search.py  vector_store.py
docs/: architecture.md  mysql-migration.md
face-recognition/: .dockerignore  Dockerfile  README.md  backend_app.py  docker-entrypoint.sh  main.py  pyproject.toml  requirements.txt
face-recognition/backend/: __init__.py  ai_client.py  config.py  db.py  main.py  repositories.py  services.py  smoke_test.py  utils.py
scripts/: Dockerfile.init-users  init-mysql.py  init-users.sh  migrate-sqlite-to-mysql.py
(+110 files in other folders)
