[project]
name = "facerecog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "insightface>=0.7.3",
    "onnxruntime>=1.20.1",
    "opencv-python>=4.13.0.92",
    "python-multipart>=0.0.20",
    "uvicorn>=0.46.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
